# vgi-tiktoken

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-entrypoint.sh
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  preprocess-require.awk  run-integration.sh
crates/tiktoken-wasm/: Cargo.toml
crates/tiktoken-wasm/src/: lib.rs
crates/tiktoken-worker/: Cargo.toml
crates/tiktoken-worker/src/: arrow_io.rs  lib.rs  main.rs  meta.rs  tiktoken.rs
crates/tiktoken-worker/src/scalar/: chunk.rs  count.rs  encoding.rs  mod.rs  tokenize.rs  truncate.rs  version.rs
crates/tiktoken-worker/tests/: tokenization.rs
test/sql/: chunk.test  count.test  tokenize.test
wasm/: build.sh
