[package]
name = "tiktoken-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "VGI worker bringing exact LLM token counting and token-aware text chunking to DuckDB over Apache Arrow, powered by tiktoken-rs"

[[bin]]
name = "tiktoken-worker"
path = "src/main.rs"

[dependencies]
vgi.workspace = true
vgi-rpc.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
log = "0.4"
env_logger = "0.11"
# tiktoken-rs BUNDLES the OpenAI BPE encodings (cl100k_base, o200k_base,
# p50k_base, r50k_base, …) at compile time — no network download at runtime.
# PINNED to =0.11.0: it is the newest release whose MSRV (1.73) fits our
# workspace `rust-version = 1.86`. tiktoken-rs 0.12 uses `let`-chains in `&&`
# position (stable only in Rust 1.88), which bumps the MSRV past ours.
tiktoken-rs = "=0.11.0"
# Lazily build & cache each encoder for the process lifetime.
once_cell = "1"
